<?xml version="1.0" encoding="utf-8"?>

<!--This is the layout for the Game Tutorial Screen-->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_gradient">

    <ScrollView
        android:id="@+id/svGameTutorial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
            android:id="@+id/llGameTutorial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/appSPadding">

            <LinearLayout
                android:id="@+id/llStep1Header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/appSPadding">
                <TextView
                    android:id="@+id/tvStep1Header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_step_1"
                    android:textSize="@dimen/textUser"
                    android:textStyle="bold"
                    android:gravity="center"/>
                <ImageView
                    android:id="@+id/ivStep1Image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/appMMargin"
                    android:src="@drawable/bg_item"
                    android:contentDescription="@string/description_scan_item"/>
                <TextView
                    android:id="@+id/tvStep1Instructions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/msg_step_1_instructions"
                    android:textSize="@dimen/textPara"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llStep2Header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/appSPadding">
                <TextView
                    android:id="@+id/tvStep2Header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_step_2"
                    android:textSize="@dimen/textUser"
                    android:textStyle="bold"
                    android:gravity="center"/>
                <ImageView
                    android:id="@+id/ivStep2Image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/appMMargin"
                    android:src="@drawable/bg_bin"
                    android:contentDescription="@string/description_scan_qr_code"/>
                <TextView
                    android:id="@+id/tvStep2Instructions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/msg_step_2_instructions"
                    android:textSize="@dimen/textPara"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llStep3Header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/appSPadding">
                <TextView
                    android:id="@+id/tvStep3Header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_step_3"
                    android:textSize="@dimen/textUser"
                    android:textStyle="bold"
                    android:gravity="center"/>
                <ImageView
                    android:id="@+id/ivStep3Image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/appMMargin"
                    android:src="@drawable/img_craft"
                    android:contentDescription="@string/description_craft"/>
                <TextView
                    android:id="@+id/tvStep3Instructions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/msg_step_3_instructions"
                    android:textSize="@dimen/textPara"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llStep4Header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/appSPadding">
                <TextView
                    android:id="@+id/tvStep4Header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_step_4"
                    android:textSize="@dimen/textUser"
                    android:textStyle="bold"
                    android:gravity="center"/>
                <ImageView
                    android:id="@+id/ivStep4Image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/appMMargin"
                    android:src="@drawable/img_battle"
                    android:contentDescription="@string/description_battle"/>
                <TextView
                    android:id="@+id/tvStep4Instructions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/msg_step_4_instructions"
                    android:textSize="@dimen/textPara"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llStep5Header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/appSPadding">
                <TextView
                    android:id="@+id/tvStep5Header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_step_5"
                    android:textSize="@dimen/textUser"
                    android:textStyle="bold"
                    android:gravity="center"/>
                <ImageView
                    android:id="@+id/ivStep5Image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/appMMargin"
                    android:src="@drawable/img_rank"
                    android:contentDescription="@string/description_compete"/>
                <TextView
                    android:id="@+id/tvStep5Instructions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/msg_step_5_instructions"
                    android:textSize="@dimen/textPara"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
