<?xml version="1.0" encoding="utf-8"?>

<!--This is the layout for the Navigation Bar-->

<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/menu_nav_bar"
        android:padding="@dimen/appSPadding"
        android:orientation="horizontal"
        android:weightSum="5"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/btnHome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/appSMargin"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:src="@drawable/btn_home"
                android:contentDescription="@string/description_home_button"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/button_home"
                android:textAlignment="center"
                android:textColor="@color/whiteText"
                android:textSize="@dimen/textPara"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnRanking"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/appSMargin"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:src="@drawable/btn_rank"
                android:contentDescription="@string/description_ranking_button"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/button_ranking"
                android:textAlignment="center"
                android:textColor="@color/whiteText"
                android:textSize="@dimen/textPara"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnScan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/appSMargin"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:src="@drawable/btn_scan"
                android:contentDescription="@string/description_scan_options_button"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/button_scan"
                android:textAlignment="center"
                android:textColor="@color/whiteText"
                android:textSize="@dimen/textPara"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnInventory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/appSMargin"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:src="@drawable/btn_inventory"
                android:contentDescription="@string/description_inventory_button"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/button_inventory"
                android:textAlignment="center"
                android:textColor="@color/whiteText"
                android:textSize="@dimen/textPara"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnProfile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/appSMargin"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:src="@drawable/btn_profile"
                android:contentDescription="@string/description_profile_button"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/button_profile"
                android:textAlignment="center"
                android:textColor="@color/whiteText"
                android:textSize="@dimen/textPara"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.LinearLayoutCompat>
